--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,14 @@
+#categories {
+  display: flex;
+}
+.item {
+  margin-right: 20px;
+}
 #gallery {
   display: flex;
 }
 .item-gallery {
-  width: 300px;
-  height: 200px;
-  margin-right: 10px;
+  width: 50px;
+  height: 50px;
+  margin-right: 20px;
 }
